fixed text aligning on submenu

--- a/themes/yoga_outreach/style.css
+++ b/themes/yoga_outreach/style.css
@@ -787,13 +787,30 @@ p {
       padding: 0 1rem;
       font-size: 16px;
       font-weight: lighter; } }
+  #site-navigation .subsubmenu {
+    display: none; }
+  #site-navigation .popup {
+    width: 100%;
+    height: 100px;
+    margin-top: 40px;
+    z-index: 2;
+    background-color: #F6FCFF;
+    border-radius: 8px;
+    position: absolute;
+    top: 0; }
   #site-navigation .submenu {
     width: 100%;
     height: 500px;
     background-color: #F6FCFF;
     z-index: 2;
     -ms-flex-order: 2;
-        order: 2; }
+        order: 2;
+    position: relative;
+    text-align: center; }
+    #site-navigation .submenu .cross {
+      position: absolute;
+      right: 15px;
+      top: 65px; }
     #site-navigation .submenu ul {
       display: block;
       display: -ms-flexbox;
